tests/fixtures/invalid/dict_pow_float.py
# Cannot power Dict[str, int] and Float
x: float = {"a": 1} ** 1.0
